[package]
name = "mdbook-dtmo"
version = "0.13.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "Creates a book from markdown files with added plugins"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-dtmo"
repository = "https://github.com/badboy/mdbook-dtmo"
edition = "2018"
keywords = ["book", "gitbook", "rustbook", "markdown"]
readme = "README.md"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4"
clap = { version = "3.0", features = ["cargo"] }
clap_complete = "3.0"
env_logger = "0.9.0"
handlebars = "4.0"
lazy_static = "1.0"
log = "0.4"
memchr = "2.0"
opener = "0.5"
pulldown-cmark = { version = "0.9.1", default-features = false }
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1"
tempfile = "3.0"
toml = "0.5.1"
topological-sort = "0.1.0"

mdbook-mermaid = "0.12.0"
mdbook-toc = "0.9.0"
mdbook-open-on-gh = "2.2.0"
mdbook = "0.4.21"

# Watch feature
notify = { version = "4.0", optional = true }
gitignore = { version = "1.0", optional = true }

# Serve feature
futures-util = { version = "0.3.4", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3.2", default-features = false, features = ["websocket"], optional = true }

# Search feature
elasticlunr-rs = { version = "3.0.0", optional = true }
ammonia = { version = "3", optional = true }

[dev-dependencies]
assert_cmd = "1"
predicates = "2"
select = "0.5"
semver = "1.0"
pretty_assertions = "1.2.1"
walkdir = "2.0"

[features]
default = ["watch", "serve", "search"]
watch = ["notify", "gitignore"]
serve = ["futures-util", "tokio", "warp"]
search = ["elasticlunr-rs", "ammonia"]

[[bin]]
doc = false
name = "mdbook-dtmo"
