[package]
name = "mdbook-dtmo"
version = "0.14.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
description = "Creates a book from markdown files with added plugins"
license = "MPL-2.0"
homepage = "https://github.com/badboy/mdbook-dtmo"
repository = "https://github.com/badboy/mdbook-dtmo"
edition = "2021"
keywords = ["book", "gitbook", "rustbook", "markdown"]
readme = "README.md"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = { version = "4.3.12", features = ["cargo", "wrap_help"] }
clap_complete = "4.3.2"
once_cell = "1.17.1"
env_logger = "0.10.0"
handlebars = "4.3.7"
log = "0.4.17"
memchr = "2.5.0"
opener = "0.6.1"
pulldown-cmark = { version = "0.9.3", default-features = false }
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shlex = "1.1.0"
tempfile = "3.4.0"
toml = "0.7.6"
topological-sort = "0.2.2"

# mdbook-dtmo extras
mdbook-mermaid = "0.12.6"
mdbook-toc = "0.14.0"
mdbook-open-on-gh = "2.4.0"
mdbook = "0.4.25"

# Watch feature
notify = { version = "6.0.1", optional = true }
notify-debouncer-mini = { version = "0.3.0", optional = true }
ignore = { version = "0.4.20", optional = true }

# Serve feature
futures-util = { version = "0.3.28", optional = true }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"], optional = true }
warp = { version = "0.3.5", default-features = false, features = ["websocket"], optional = true }

# Search feature
elasticlunr-rs = { version = "3.0.2", optional = true }
ammonia = { version = "3.3.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
select = "0.6.0"
semver = "1.0.17"
pretty_assertions = "1.3.0"
walkdir = "2.3.3"

[features]
default = ["watch", "serve", "search"]
watch = ["dep:notify", "dep:notify-debouncer-mini", "dep:ignore"]
serve = ["dep:futures-util", "dep:tokio", "dep:warp"]
search = ["dep:elasticlunr-rs", "dep:ammonia"]

[[bin]]
doc = false
name = "mdbook-dtmo"
